libs/modkit/macros/tests/ui/fail/duplicate_lifecycle.stderr
error: duplicate `lifecycle(...)` parameter
 --> tests/ui/fail/duplicate_lifecycle.rs:3:63
  |
3 | #[module(name="x", caps=[stateful], lifecycle(entry="serve"), lifecycle(entry="serve"))]
  |                                                               ^^^^^^^^^
